--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -187,10 +187,22 @@ header p {
     margin: 1em 0 0 0;
     padding: 1em;
     background: rgb(254, 254, 254);
-    -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
-    -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
+    -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.25);
     z-index: 15;
+    border-radius: 5px;
+}
+
+a.desc:hover {
+    transform: scale(1.01);
+    background-color: var(--light-grey);
+}
+
+.desc img {
+    margin-top: 10px;
+    width: 35%;
+    border-radius: 25px;
 }
 
 .direction-l .desc,
