--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,6 +51,9 @@ header {
     padding: 10px;
     text-align: center;
     color: #010001;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header img {
@@ -59,10 +62,12 @@ header img {
 
 header p {
     color: var(--grey);
+    width: auto;
 }
 
 header a {
     color: var(--nav-text-color);
+    display: inline-block;
 }
 
 header a:hover {
