--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -19,7 +19,8 @@
 
 /* Year header */
 #HolySquadStory .timeline-year h2 {
-    font-size: 2em;
+    font-family: 'OZIK-Bold.woff2', sans-serif;
+    font-size: 2.75em;
     font-weight: bold;
     text-align: center;
     margin-bottom: 20px;
@@ -53,7 +54,8 @@
 
 /* Date header */
 #HolySquadStory .date-header {
-    font-size: 1.5em;
+    font-family: 'OZIK-Bold.woff2', monospace;
+    font-size: 2.25em;
     font-weight: 600;
     color: #555;
     margin-bottom: 15px;
@@ -61,6 +63,7 @@
 
 /* Event styles */
 #HolySquadStory .event {
+    font-family: 'PPAgrandir-Medium.woff2', sans-serif;
     margin-bottom: 20px;
     padding: 20px;
     background-color: #fff;
